initial work on replicate qc

--- a/pipelines/replicate-qc/20190321-replicate-qc.ipynb
+++ b/pipelines/replicate-qc/20190321-replicate-qc.ipynb
@@ -48,7 +48,8 @@
    ],
    "source": [
     "!pip install dask-distance\n",
-    "import dask_distance as dist\n",
+    "import dask_distance as dadist\n",
+    "import scipy.spatial.distance as dist\n",
     "import os"
    ]
   },
@@ -68,7 +69,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sampleset = \"AG1000G-UG\""
+    "sampleset = \"AG1000G-UG\"\n",
+    "\n",
+    "# I wonder if used memory will scale better with chunk width = 1??\n",
+    "chunksize = 30000"
    ]
   },
   {
@@ -77,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calldata = zarr.open_group(\"/gcs/observatory/callset.zarr\", mode=\"r\")"
+    "storage_path = 'ag1000g-release/observatory/callset.zarr'"
    ]
   },
   {
@@ -86,12 +90,88 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"/gcs/observatory/manifest\")"
+    "# wrapper function to reshape for map_blocks\n",
+    "def trans_d(block, metric=\"euclidean\"):\n",
+    "    return dist.pdist(block, metric=metric).reshape((-1, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pruning missing count\n",
+    "def count_nmissing(X1, X2):\n",
+    "    \n",
+    "    X1 = np.array(X1)\n",
+    "    X2 = np.array(X2)\n",
+    "    \n",
+    "    # compress by non missing\n",
+    "    ok = (X1 >= 0) & (X2 >= 0)\n",
+    "    \n",
+    "    # compute on array\n",
+    "    return np.sum(ok)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cityblock distance after pruning missings\n",
+    "def cib_dist_nmissing(X1, X2):\n",
+    "    \n",
+    "    X1 = np.array(X1)\n",
+    "    X2 = np.array(X2)\n",
+    "    \n",
+    "    # compress by non missing\n",
+    "    ok = (X1 >= 0) & (X2 >= 0)\n",
+    "    \n",
+    "    # compute on array\n",
+    "    return dist.cityblock(\n",
+    "        np.compress(ok, X1),\n",
+    "        np.compress(ok, X2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GCS configuration\n",
+    "import gcsfs\n",
+    "\n",
+    "gcs_bucket_fs = gcsfs.GCSFileSystem(\n",
+    "    project='malariagen-jupyterhub', token='anon', access='read_only')\n",
+    "\n",
+    "store = gcsfs.mapping.GCSMap(\n",
+    "    storage_path, gcs=gcs_bucket_fs, check=False, create=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calldata = zarr.Group(store)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"/gcs/observatory/manifest\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,13 +181,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dask_kubernetes import KubeCluster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38439b8c84534f48ad7755c3a792f20d",
+       "model_id": "c160a79875b64ae5a32e02c81c7c9b02",
        "version_major": 2,
        "version_minor": 0
       },
@@ -120,14 +209,13 @@
     }
    ],
    "source": [
-    "from dask_kubernetes import KubeCluster\n",
     "cluster = KubeCluster(n_workers=40)\n",
     "cluster"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +236,7 @@
        "<td style=\"vertical-align: top; border: 0px solid white\">\n",
        "<h3>Client</h3>\n",
        "<ul>\n",
-       "  <li><b>Scheduler: </b>tcp://10.8.71.16:34861\n",
+       "  <li><b>Scheduler: </b>tcp://10.8.78.8:34327\n",
        "  <li><b>Dashboard: </b><a href='/user/nicholasharding/proxy/8787/status' target='_blank'>/user/nicholasharding/proxy/8787/status</a>\n",
        "</ul>\n",
        "</td>\n",
@@ -164,10 +252,10 @@
        "</table>"
       ],
       "text/plain": [
-       "<Client: scheduler='tcp://10.8.71.16:34861' processes=0 cores=0>"
+       "<Client: scheduler='tcp://10.8.78.8:34327' processes=0 cores=0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +275,7 @@
        "361"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,6 +304,9 @@
     "def find_phase2_bialleleic_sites(chrom):\n",
     "\n",
     "    g = allel.GenotypeDaskArray(phase2_callset[chrom][\"calldata\"][\"genotype\"])\n",
+    "    \n",
+    "    # TO DO PASS ONLY\n",
+    "    \n",
     "    biallelic = (g.max(axis=[1,2]) <= 1).compute()\n",
     "                 \n",
     "    d = {}\n",
@@ -229,26 +320,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = {\"pwd_contigs\": [\"3L\", \"3R\", \"2L\", \"2R\", \"X\"]}"
+    "config = {\"pwd_contigs\": [\"3L\", \"3R\", \"2L\", \"2R\", \"X\"]}\n",
+    "contigs = config[\"pwd_contigs\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.setrecursionlimit(100000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,99 +339,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "130321"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(samples)**2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "pairs = list(combinations(range(len(samples)), 2))\n",
-    "npairs = len(pairs)\n",
-    "dist_e = np.zeros((len(config[\"pwd_contigs\"]), npairs))\n",
-    "dist_c = np.zeros((len(config[\"pwd_contigs\"]), npairs))\n",
-    "numb_s = np.zeros((len(config[\"pwd_contigs\"]), npairs))"
+    "npairs = len(pairs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h = np.zeros((len(contigs), npairs))\n",
+    "denom = np.zeros((len(contigs), npairs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ca = count_alts.T\n",
+    "ratio = ca.shape[0] / ca.chunksize[0] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "compressing\n",
-      "mapped ok\n"
+      "3L compressing\n",
+      "3L remapping\n",
+      "3R compressing\n",
+      "3R remapping\n",
+      "2L compressing\n",
+      "2L remapping\n",
+      "2R compressing\n",
+      "2R remapping\n",
+      "X compressing\n",
+      "X remapping\n"
      ]
     }
    ],
    "source": [
-    "for cix, contig in enumerate(config[\"pwd_contigs\"]):\n",
+    "alt_list = []\n",
+    "for cix, contig in enumerate(contigs):\n",
     "\n",
     "    sites_pos = allel.SortedIndex(called_sites[contig][\"variants/POS\"])\n",
     "    bial_pos, bial_alt, bial_ref = find_phase2_bialleleic_sites(contig)\n",
     "    loc = sites_pos.locate_keys(bial_pos)\n",
-    "    \n",
+    "\n",
     "    alleles=da.hstack((bial_ref.reshape((-1, 1)), bial_alt))\n",
     "\n",
     "    # reduce to biallelic sites all samples still\n",
-    "    print(\"compressing\")\n",
+    "    print(contig, \"compressing\")\n",
     "    gt_a = allel.GenotypeDaskArray(calldata[contig][\"calldata/GT\"]).compress(loc)\n",
     "\n",
+    "    print(contig, \"remapping\")\n",
     "    mapping = allel.create_allele_mapping(\n",
     "        ref=np.compress(loc, called_sites[contig][\"variants/REF\"]),\n",
     "        alt=np.compress(loc, called_sites[contig][\"variants/ALT\"]),\n",
     "        alleles=alleles)\n",
-    "    \n",
-    "    print(\"mapped ok\")\n",
-    "    remap = gt_a.map_alleles(mapping)\n",
-    "    count_alts = remap.to_n_alt()\n",
-    "    is_called = remap.is_called()\n",
-    "    \n",
-    "    for i, j in pairs:\n",
-    "        ix = allel.condensed_coords(i, j, len(samples))\n",
-    "        nmloc = (is_called[:, i] & is_called[:, j]).compute()\n",
     "\n",
-    "        x1 = da.compress(nmloc, count_alts[:, i], axis=0)\n",
-    "        x2 = da.compress(nmloc, count_alts[:, j], axis=0)\n",
-    "            \n",
-    "        dist_e[cix, ix] = dist.euclidean(x1, x2)\n",
-    "        dist_c[cix, ix] = dist.cityblock(x1, x2)\n",
-    "        numb_s[cix, ix] = x1.shape[0]\n",
-    "        \n",
-    "    break"
+    "    count_alts = gt_a.map_alleles(mapping).to_n_alt(fill=-1)\n",
+    "    \n",
+    "    alt_list.append(count_alts)\n",
+    "\n",
+    "    # transpose and rechunk for scipy dist object\n",
+    "    ca = count_alts.T\n",
+    "    ratio = ca.shape[0] / ca.chunksize[0]\n",
+    "    newchunks = (ca.shape[0], int(ca.chunksize[1] / ratio))\n",
+    "    ca = ca.rechunk(chunks=newchunks)\n",
+    "    nchunks = len(ca.chunks[1])\n",
+    "\n",
+    "    D = ca.map_blocks(\n",
+    "        trans_d, \n",
+    "        metric=cib_dist_nmissing,\n",
+    "        chunks=((1,), tuple(np.repeat(1, nchunks))), \n",
+    "        dtype=float, \n",
+    "        drop_axis=(0, ), \n",
+    "        new_axis=(0, ))\n",
+    "    \n",
+    "    X = ca.map_blocks(\n",
+    "        trans_d, \n",
+    "        metric=count_nmissing,\n",
+    "        chunks=((1,), tuple(np.repeat(1, nchunks))), \n",
+    "        dtype=float, \n",
+    "        drop_axis=(0, ), \n",
+    "        new_axis=(0, ))\n",
+    "    \n",
+    "    h[cix] = D.compute().sum(axis=1)\n",
+    "    denom[cix] = X.compute().sum(axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "np.savez_compressed(\n",
-    "    'pwdist_{sampleset}'.format(sampleset=sampleset), \n",
-    "    euclidean=dist_e, \n",
-    "    cityblock=dist_c, \n",
-    "    number_sites=numb_s)"
+    "    \"replicate-qc-{sset}\".format(sset=sampleset), \n",
+    "    cityblock=h, \n",
+    "    nsites=denom)"
    ]
   }
  ],
