Modifications to be run in tracking dir

--- a/pipelines/replicate-qc/20190321-replicate-qc.ipynb
+++ b/pipelines/replicate-qc/20190321-replicate-qc.ipynb
@@ -10,42 +10,66 @@
     "\n",
     "Each contig is handled separately, and the dimensions of the resulting outputs are: contigs x npairs.\n",
     "\n",
-    "Three arrays are written, one with euclidean distance, one with cityblock distance and one with the number of comparable (ie called) sites.\n",
-    "\n",
     "NB: We restrict to bialleleic positions in phase 2. \n",
     "\n",
-    "NB: Efficiency could be improved markedly by chunking the genotypes with (X, 1, 2), to make it more efficient at reading in the relevant data. \n",
-    "(I'm currently recreating on the cluster)"
+    "## Use\n",
+    "\n",
+    "0. Log onto `datalab.malariagen.net` and clone the repo with submodules.\n",
+    "\n",
+    "1. Copy this notebook and the replicate-qc-analysis one to the tracking directory of the sampleset you wish to perform replicate QC on.\n",
+    "\n",
+    "2. Ensure the `merged.zarr` is in the expected location on the datalab server.\n",
+    "\n",
+    "3. Run this notebook to compute distances\n",
+    "\n",
+    "4. Run the other notebook to discard samples that fail QC."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import zarr\n",
     "import allel\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: dask-distance in /opt/conda/lib/python3.6/site-packages (0.2.0)\n",
-      "Requirement already satisfied: dask in /opt/conda/lib/python3.6/site-packages (from dask-distance) (1.0.0)\n",
-      "Requirement already satisfied: numpy in /opt/conda/lib/python3.6/site-packages (from dask-distance) (1.15.4)\n",
-      "\u001b[33mYou are using pip version 19.0, however version 19.0.3 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "sampleset = Path(\".\").absolute().name\n",
+    "sampleset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "storage_path = 'ag1000g-release/observatory/{sampleset}/callset.zarr'.format(sampleset=sampleset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "manifest_fn = \"/gcs/observatory/{sampleset}/manifest\".format(sampleset=sampleset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "!pip install dask-distance\n",
     "import dask_distance as dadist\n",
@@ -55,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,28 +89,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sampleset = \"AG1000G-UG\"\n",
-    "\n",
-    "# I wonder if used memory will scale better with chunk width = 1??\n",
     "chunksize = 30000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "storage_path = 'ag1000g-release/observatory/callset.zarr'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,16 +174,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"/gcs/observatory/manifest\")"
+    "df = pd.read_csv(manifest_fn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,112 +193,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dask_kubernetes import KubeCluster"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c160a79875b64ae5a32e02c81c7c9b02",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HTML(value='<h2>KubeCluster</h2>'), HBox(children=(HTML(value='\\n<div>\\n  <style scoped>\\n    .…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
+    "# kubernetes cluster setup\n",
+    "from dask_kubernetes import KubeCluster\n",
     "cluster = KubeCluster(n_workers=40)\n",
     "cluster"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# dask client setup\n",
     "from dask.distributed import Client, progress\n",
-    "client = Client(cluster)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table style=\"border: 2px solid white;\">\n",
-       "<tr>\n",
-       "<td style=\"vertical-align: top; border: 0px solid white\">\n",
-       "<h3>Client</h3>\n",
-       "<ul>\n",
-       "  <li><b>Scheduler: </b>tcp://10.8.78.8:34327\n",
-       "  <li><b>Dashboard: </b><a href='/user/nicholasharding/proxy/8787/status' target='_blank'>/user/nicholasharding/proxy/8787/status</a>\n",
-       "</ul>\n",
-       "</td>\n",
-       "<td style=\"vertical-align: top; border: 0px solid white\">\n",
-       "<h3>Cluster</h3>\n",
-       "<ul>\n",
-       "  <li><b>Workers: </b>0</li>\n",
-       "  <li><b>Cores: </b>0</li>\n",
-       "  <li><b>Memory: </b>0 B</li>\n",
-       "</ul>\n",
-       "</td>\n",
-       "</tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<Client: scheduler='tcp://10.8.78.8:34327' processes=0 cores=0>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "client = Client(cluster)\n",
     "client"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "361"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# time taken scales exponentially with size of sampleset\n",
     "len(samples)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,36 +300,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ca = count_alts.T\n",
-    "ratio = ca.shape[0] / ca.chunksize[0] "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3L compressing\n",
-      "3L remapping\n",
-      "3R compressing\n",
-      "3R remapping\n",
-      "2L compressing\n",
-      "2L remapping\n",
-      "2R compressing\n",
-      "2R remapping\n",
-      "X compressing\n",
-      "X remapping\n"
-     ]
-    }
-   ],
    "source": [
     "alt_list = []\n",
     "for cix, contig in enumerate(contigs):\n",
@@ -442,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
